--- a/main.css
+++ b/main.css
@@ -22,12 +22,16 @@ header {
     padding-left: 0.5cm;
 }
 
+#videos1 {
+    padding-left: 0.2in;
+}
+
 .videos {
     padding-left: 0.5in;
 }
 
 .add {
-    padding-left: 0.5in;
+    padding-left: 0.2in;
 }
 
 #more {
