--- a/main.css
+++ b/main.css
@@ -34,10 +34,10 @@ header {
     padding-left: 0.2in;
 }
 
-#more {
+.more {
     color: orange;
 }
 
-#hyperlink {
+.hyperlink {
     padding-left: 0.5cm;
 }
